@@ -2,7 +2,7 @@ Package: markovMSM
 Type: Package
 Title: Methods for Checking the Markov Condition in Multi-State
         Survival Data
-Version: 0.1.1
+Version: 0.1.2
 Authors@R: c(
 	person(
 		given = "Gustavo",
@@ -44,9 +44,9 @@ LazyData: yes
 NeedsCompilation: yes
 Suggests: rmarkdown, knitr
 VignetteBuilder: knitr
-Packaged: 2022-09-29 19:37:59 UTC; asus
+Packaged: 2023-01-02 10:42:21 UTC; asus
 Author: Gustavo Soutinho [aut, cre] (<https://orcid.org/0000-0002-0559-1327>),
   Luis Meira-Machado [aut] (<https://orcid.org/0000-0002-8577-7665>)
 Maintainer: Gustavo Soutinho <gustavosoutinho@sapo.pt>
 Repository: CRAN
-Date/Publication: 2022-09-29 20:00:09 UTC
+Date/Publication: 2023-01-05 19:40:02 UTC
