@@ -54,3 +54,4 @@ importFrom("survival",strata)
 importFrom("survival",survfit)
 importFrom("survival",untangle.specials)
 importFrom("utils",capture.output)
+importFrom("utils",flush.console)
